--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAlertController.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAlertController.java.vm
@@ -1,9 +1,11 @@
 package org.robolectric.shadows;
 
 import android.view.View;
+import android.view.LayoutInflater;
 import android.widget.Adapter;
 import android.widget.ListView;
 import com.android.internal.app.AlertController;
+import org.robolectric.RuntimeEnvironment;
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
 import org.robolectric.annotation.RealObject;
@@ -14,8 +16,8 @@ import java.lang.reflect.InvocationTargetException;
 import static org.robolectric.internal.Shadow.directlyOn;
 
 /**
- * Shadow for {@link com.android.internal.app.AlertController}.
- */
+* Shadow for {@link com.android.internal.app.AlertController}.
+*/
 @Implements(value = AlertController.class, isInAndroidSdk = false)
 public class ShadowAlertController {
 
@@ -62,6 +64,13 @@ public class ShadowAlertController {
     this.view = view;
     directlyOn(realAlertController, AlertController.class).setView(view);
   }
+
+#if ($api >= 19)
+  @Implementation
+  public void setView(int resourceId) {
+    setView(LayoutInflater.from(RuntimeEnvironment.application).inflate(resourceId, null));
+  }
+#end
 
   @Implementation
   public void setIcon(int iconId) {
