Fix for missing shadows that should be generated even on API levels they are not defined.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
@@ -665,5 +665,9 @@ public class ShadowAccessibilityNodeInfo {
       return label;
     }
   }
+#else
+  public static final class ShadowAccessibilityAction {
+    // Dummy class, this was added in API21
+  }
 #end
 }
