--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
@@ -2,8 +2,11 @@ package org.robolectric.shadows;
 
 import android.graphics.Rect;
 import android.os.Bundle;
+import android.os.Parcel;
+import android.os.Parcelable;
 import android.text.TextUtils;
 import android.util.Pair;
+import android.util.SparseArray;
 import android.view.View;
 import android.view.accessibility.AccessibilityNodeInfo;
 
@@ -32,8 +35,25 @@ public class ShadowAccessibilityNodeInfo {
   private static final Map<StrictEqualityNodeWrapper, StackTraceElement[]> obtainedInstances =
       new HashMap<>();
 
+  private static final SparseArray<StrictEqualityNodeWrapper> orderedInstance = new SparseArray<>();
+
   // Bitmasks for actions
   public static final int UNDEFINED_SELECTION_INDEX = -1;
+
+  public static final Parcelable.Creator<AccessibilityNodeInfo> CREATOR =
+      new Parcelable.Creator<AccessibilityNodeInfo>() {
+
+    @Override
+    public AccessibilityNodeInfo createFromParcel(Parcel source) {
+      return obtain(orderedInstance.get(source.readInt()).mInfo);
+    }
+
+    @Override
+    public AccessibilityNodeInfo[] newArray(int size) {
+      return new AccessibilityNodeInfo[size];
+    }};
+
+  private static int sAllocationCount = 0;
 
   private static final int CLICKABLE_MASK = 0x00000001;
 
@@ -89,8 +109,12 @@ public class ShadowAccessibilityNodeInfo {
         ((ShadowAccessibilityNodeInfo) ShadowExtractor.extract(info));
     final AccessibilityNodeInfo obtainedInstance = shadowInfo.getClone();
 
-    obtainedInstances.put(
-        new StrictEqualityNodeWrapper(obtainedInstance), Thread.currentThread().getStackTrace());
+    sAllocationCount++;
+    StrictEqualityNodeWrapper wrapper = new StrictEqualityNodeWrapper(obtainedInstance);
+    obtainedInstances.put(wrapper, Thread.currentThread().getStackTrace());
+    orderedInstance.put(sAllocationCount, wrapper);
+    ReflectionHelpers.setStaticField(
+        AccessibilityNodeInfo.class, "CREATOR", ShadowAccessibilityNodeInfo.CREATOR);    
     return obtainedInstance;
   }
 
@@ -116,8 +140,12 @@ public class ShadowAccessibilityNodeInfo {
     shadowObtained.performedActionAndArgsList = new LinkedList<>();
 
     shadowObtained.view = view;
-    obtainedInstances.put(
-        new StrictEqualityNodeWrapper(obtainedInstance), Thread.currentThread().getStackTrace());
+    sAllocationCount++;
+    StrictEqualityNodeWrapper wrapper = new StrictEqualityNodeWrapper(obtainedInstance);
+    obtainedInstances.put(wrapper, Thread.currentThread().getStackTrace());
+    orderedInstance.put(sAllocationCount, wrapper);
+    ReflectionHelpers.setStaticField(
+        AccessibilityNodeInfo.class, "CREATOR", ShadowAccessibilityNodeInfo.CREATOR);
     return obtainedInstance;
   }
 
@@ -158,6 +186,7 @@ public class ShadowAccessibilityNodeInfo {
    */
   public static void resetObtainedInstances() {
     obtainedInstances.clear();
+    orderedInstance.clear();
   }
 
   @Implementation
@@ -177,6 +206,15 @@ public class ShadowAccessibilityNodeInfo {
     }
 
     obtainedInstances.remove(wrapper);
+    int keyOfWrapper = -1;
+    for (int i = 0; i < orderedInstance.size(); i++) {
+      int key = orderedInstance.keyAt(i);
+      if (orderedInstance.get(key).equals(wrapper)) {
+        keyOfWrapper = key;
+        break;
+      }
+    }
+    orderedInstance.remove(keyOfWrapper);
   }
 
   @Implementation
@@ -670,4 +708,22 @@ public class ShadowAccessibilityNodeInfo {
     // Dummy class, this was added in API21
   }
 #end
+  @Implementation
+  public int describeContents() {
+    return 0;
+  }
+
+  @Implementation
+  public void writeToParcel(Parcel dest, int flags) {
+    StrictEqualityNodeWrapper wrapper = new StrictEqualityNodeWrapper(realAccessibilityNodeInfo);
+    int keyofWrapper = -1;
+    for (int i = 0; i < orderedInstance.size(); i++) {
+      int key = orderedInstance.keyAt(i);
+      if (orderedInstance.get(key).equals(wrapper)) {
+         keyofWrapper = key;
+         break;
+      }
+    }
+    dest.writeInt(keyofWrapper);
+  }
 }
