--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityNodeInfo.java.vm
@@ -45,7 +45,7 @@ public class ShadowAccessibilityNodeInfo {
 
     @Override
     public AccessibilityNodeInfo createFromParcel(Parcel source) {
-      return obtain(orderedInstances.valueAt(source.readInt()).mInfo);
+      return obtain(orderedInstances.get(source.readInt()).mInfo);
     }
 
     @Override
@@ -718,13 +718,13 @@ public class ShadowAccessibilityNodeInfo {
   @Implementation
   public void writeToParcel(Parcel dest, int flags) {
     StrictEqualityNodeWrapper wrapper = new StrictEqualityNodeWrapper(realAccessibilityNodeInfo);
-    int indexOfWrapper = -1;
+    int keyOfWrapper = -1;
     for (int i = 0; i < orderedInstances.size(); i++) {
       if (orderedInstances.valueAt(i).equals(wrapper)) {
-        indexOfWrapper = i;
+        keyOfWrapper = orderedInstances.keyAt(i);
         break;
       }
     }
-    dest.writeInt(indexOfWrapper);
+    dest.writeInt(keyOfWrapper);
   }
 }
